test/asm/deprecated-functions.err
warning: `STRIN` is deprecated; use 0-indexed `STRFIND` instead [-Wobsolete]
    at deprecated-functions.asm(4)
warning: `STRRIN` is deprecated; use 0-indexed `STRRFIND` instead [-Wobsolete]
    at deprecated-functions.asm(5)
warning: `STRSUB` is deprecated; use 0-indexed `STRSLICE` instead [-Wobsolete]
    at deprecated-functions.asm(7)
warning: `STRSUB` is deprecated; use 0-indexed `STRSLICE` instead [-Wobsolete]
    at deprecated-functions.asm(8)
warning: `STRSUB` is deprecated; use 0-indexed `STRSLICE` instead [-Wobsolete]
    at deprecated-functions.asm(9)
warning: `STRSUB` is deprecated; use 0-indexed `STRSLICE` instead [-Wobsolete]
    at deprecated-functions.asm(10)
warning: STRSUB: Length too big: 999 [-Wbuiltin-args]
    at deprecated-functions.asm(10)
warning: STRSLICE: Stop index 999 is past the end of the string [-Wbuiltin-args]
    at deprecated-functions.asm(10)
warning: `CHARSUB` is deprecated; use 0-indexed `STRCHAR` instead [-Wobsolete]
    at deprecated-functions.asm(12)
warning: `CHARSUB` is deprecated; use 0-indexed `STRCHAR` instead [-Wobsolete]
    at deprecated-functions.asm(13)
warning: `CHARSUB` is deprecated; use 0-indexed `STRCHAR` instead [-Wobsolete]
    at deprecated-functions.asm(14)
warning: CHARSUB: Position starts at 1 [-Wbuiltin-args]
    at deprecated-functions.asm(14)
warning: STRCHAR: Index starts at 0 [-Wbuiltin-args]
    at deprecated-functions.asm(14)
warning: `CHARSUB` is deprecated; use 0-indexed `STRCHAR` instead [-Wobsolete]
    at deprecated-functions.asm(15)
warning: CHARSUB: Position 999 is past the end of the string [-Wbuiltin-args]
    at deprecated-functions.asm(15)
warning: STRCHAR: Index 999 is past the end of the string [-Wbuiltin-args]
    at deprecated-functions.asm(15)
warning: `STRSUB` is deprecated; use 0-indexed `STRSLICE` instead [-Wobsolete]
    at deprecated-functions.asm(26)
error: STRSUB: Invalid UTF-8 byte 0xA3
    at deprecated-functions.asm(26)
error: STRSUB: Incomplete UTF-8 character
    at deprecated-functions.asm(26)
warning: `STRSUB` is deprecated; use 0-indexed `STRSLICE` instead [-Wobsolete]
    at deprecated-functions.asm(27)
error: STRSUB: Invalid UTF-8 byte 0xA3
    at deprecated-functions.asm(27)
warning: STRSUB: Position 9 is past the end of the string [-Wbuiltin-args]
    at deprecated-functions.asm(27)
error: STRSUB: Incomplete UTF-8 character
    at deprecated-functions.asm(27)
warning: `STRSUB` is deprecated; use 0-indexed `STRSLICE` instead [-Wobsolete]
    at deprecated-functions.asm(28)
error: STRSUB: Invalid UTF-8 byte 0xA3
    at deprecated-functions.asm(28)
warning: STRSUB: Position 12 is past the end of the string [-Wbuiltin-args]
    at deprecated-functions.asm(28)
error: STRSUB: Incomplete UTF-8 character
    at deprecated-functions.asm(28)
Assembly aborted with 6 errors!
